fix package_facts tests now that aliases are dropped
Signed-off-by: Adam Miller <maxamillion@fedoraproject.org>

--- a/test/integration/targets/package_facts/tasks/main.yml
+++ b/test/integration/targets/package_facts/tasks/main.yml
@@ -58,7 +58,7 @@
 
     - name: Gather package facts
       package_facts:
-        manager: zypper
+        manager: rpm
 
     - name: check for ansible_facts.packages exists
       assert:
