--- a/test/integration/targets/ios_command/tests/cli/output.yaml
+++ b/test/integration/targets/ios_command/tests/cli/output.yaml
@@ -6,6 +6,7 @@
     commands:
       - show version
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -19,6 +20,7 @@
       - show version
       - show interfaces
     authorize: yes
+  become: yes
   register: result
 
 - assert:
