--- a/test/integration/targets/ios_command/tests/cli/bad_operator.yaml
+++ b/test/integration/targets/ios_command/tests/cli/bad_operator.yaml
@@ -9,6 +9,7 @@
     authorize: yes
     wait_for:
       - "result[0] contains 'Description: Foo'"
+  become: yes
   register: result
   ignore_errors: yes
 
