--- a/test/integration/targets/ios_command/tests/cli/timeout.yaml
+++ b/test/integration/targets/ios_command/tests/cli/timeout.yaml
@@ -8,6 +8,7 @@
     authorize: yes
     wait_for:
       - "result[0] contains bad_value_string"
+  become: yes
   register: result
   ignore_errors: yes
 
