--- a/test/integration/targets/ios_config/tests/cli/toplevel.yaml
+++ b/test/integration/targets/ios_config/tests/cli/toplevel.yaml
@@ -6,11 +6,13 @@
     lines: ['hostname {{ shorter_hostname }}']
     match: none
     authorize: yes
+  become: yes
 
 - name: configure top level command
   ios_config:
     lines: ['hostname foo']
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -22,6 +24,7 @@
   ios_config:
     lines: ['hostname foo']
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -33,5 +36,6 @@
     lines: ['hostname {{ shorter_hostname }}']
     match: none
     authorize: yes
+  become: yes
 
 - debug: msg="END cli/toplevel.yaml on connection={{ ansible_connection }}"
