--- a/test/integration/targets/ios_config/tests/cli/src_basic.yaml
+++ b/test/integration/targets/ios_config/tests/cli/src_basic.yaml
@@ -10,11 +10,13 @@
       - interface Loopback999
     match: none
     authorize: yes
+  become: yes
 
 - name: configure device with config
   ios_config:
     src: basic/config.j2
     authorize: yes
+  become: yes
   register: result
 
 - name: debug, remove me
@@ -31,6 +33,7 @@
   ios_config:
     src: basic/config.j2
     authorize: yes
+  become: yes
   register: result
 
 - assert:
