--- a/test/integration/targets/ios_config/tests/cli/src_match_none.yaml
+++ b/test/integration/targets/ios_config/tests/cli/src_match_none.yaml
@@ -10,12 +10,14 @@
       - interface Loopback999
     match: none
     authorize: yes
+  become: yes
 
 - name: configure device with config
   ios_config:
     src: basic/config.j2
     match: none
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -29,6 +31,7 @@
   ios_config:
     src: basic/config.j2
     authorize: yes
+  become: yes
   register: result
 
 - assert:
