--- a/test/integration/targets/ios_config/tests/cli/toplevel_after.yaml
+++ b/test/integration/targets/ios_config/tests/cli/toplevel_after.yaml
@@ -8,12 +8,14 @@
       - "hostname {{ shorter_hostname }}"
     match: none
     authorize: yes
+  become: yes
 
 - name: configure top level command with before
   ios_config:
     lines: ['hostname foo']
     after: ['snmp-server contact bar']
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -27,6 +29,7 @@
     lines: ['hostname foo']
     after: ['snmp-server contact foo']
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -40,5 +43,6 @@
       - "hostname {{ shorter_hostname }}"
     match: none
     authorize: yes
+  become: yes
 
 - debug: msg="END cli/toplevel_after.yaml on connection={{ ansible_connection }}"
