--- a/test/integration/targets/ios_interface/tests/cli/intent.yaml
+++ b/test/integration/targets/ios_interface/tests/cli/intent.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START ios_interface cli/intent.yaml"
+- debug: msg="START ios_interface cli/intent.yaml on connection={{ ansible_connection }}"
 
 - name: Run show version
   ios_command:
