--- a/test/integration/targets/ios_config/tests/cli/backup.yaml
+++ b/test/integration/targets/ios_config/tests/cli/backup.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/backup.yaml"
+- debug: msg="START cli/backup.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   ios_config:
@@ -48,4 +48,4 @@
     that:
       - "backup_files.files is defined"
 
-- debug: msg="END cli/backup.yaml"
+- debug: msg="END cli/backup.yaml on connection={{ ansible_connection }}"
