--- a/test/integration/targets/ios_config/tests/cli/toplevel_after.yaml
+++ b/test/integration/targets/ios_config/tests/cli/toplevel_after.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/toplevel_after.yaml"
+- debug: msg="START cli/toplevel_after.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   ios_config:
@@ -41,4 +41,4 @@
     match: none
     authorize: yes
 
-- debug: msg="END cli/toplevel_after.yaml"
+- debug: msg="END cli/toplevel_after.yaml on connection={{ ansible_connection }}"
