--- a/test/integration/targets/ios_system/tests/cli/set_hostname.yaml
+++ b/test/integration/targets/ios_system/tests/cli/set_hostname.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/set_hostname.yaml"
+- debug: msg="START cli/set_hostname.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   ios_config:
@@ -33,4 +33,4 @@
     match: none
     authorize: yes
 
-- debug: msg="END cli/set_hostname.yaml"
+- debug: msg="END cli/set_hostname.yaml on connection={{ ansible_connection }}"
