--- a/test/integration/targets/ios_system/tests/cli/set_name_servers.yaml
+++ b/test/integration/targets/ios_system/tests/cli/set_name_servers.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/set_name_servers.yaml"
+- debug: msg="START cli/set_name_servers.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   ios_config:
@@ -88,4 +88,4 @@
     match: none
     authorize: yes
 
-- debug: msg="END cli/set_name_servers.yaml"
+- debug: msg="END cli/set_name_servers.yaml on connection={{ ansible_connection }}"
