--- a/test/integration/targets/ios_facts/tests/cli/invalid_subset.yaml
+++ b/test/integration/targets/ios_facts/tests/cli/invalid_subset.yaml
@@ -7,6 +7,7 @@
     gather_subset:
       - "foobar"
     authorize: yes
+  become: yes
   register: result
   ignore_errors: true
 
@@ -30,6 +31,7 @@
       - "!hardware"
       - "hardware"
     authorize: yes
+  become: yes
   register: result
   ignore_errors: true
 
