--- a/test/integration/targets/ios_logging/tests/cli/basic.yaml
+++ b/test/integration/targets/ios_logging/tests/cli/basic.yaml
@@ -6,6 +6,7 @@
     name: 172.16.0.1
     state: absent
     authorize: yes
+  become: yes
 
 - name: Remove console
   ios_logging:
@@ -13,6 +14,7 @@
     level: warnings
     state: absent
     authorize: yes
+  become: yes
 
 - name: Remove buffer
   ios_logging:
@@ -20,6 +22,7 @@
     size: 8000
     authorize: yes
     state: absent
+  become: yes
 
 # start tests
 - name: Set up host logging
@@ -29,6 +32,7 @@
     facility: local7
     state: present
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -43,6 +47,7 @@
     name: 172.16.0.1
     state: present
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -55,6 +60,7 @@
     name: 172.16.0.1
     state: absent
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -68,6 +74,7 @@
     name: 172.16.0.1
     state: absent
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -80,6 +87,7 @@
     level: warnings
     state: present
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -92,6 +100,7 @@
     dest: buffered
     size: 8000
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -105,6 +114,7 @@
       - { dest: console, level: notifications }
       - { dest: buffered, size: 9000 }
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -120,6 +130,7 @@
       - { dest: buffered, size: 9000 }
     state: absent
     authorize: yes
+  become: yes
   register: result
 
 - assert:
