--- a/test/integration/targets/ios_system/tests/cli/set_domain_name.yaml
+++ b/test/integration/targets/ios_system/tests/cli/set_domain_name.yaml
@@ -6,11 +6,13 @@
     lines: no ip domain-name
     match: none
     authorize: yes
+  become: yes
 
 - name: configure domain_name
   ios_system:
     domain_name: eng.ansible.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -21,6 +23,7 @@
   ios_system:
     domain_name: eng.ansible.com
     authorize: yes
+  become: yes
   register: result
 
 - assert:
@@ -32,5 +35,6 @@
     lines: no ip domain-name
     match: none
     authorize: yes
+  become: yes
 
 - debug: msg="END cli/set_domain_name.yaml on connection={{ ansible_connection }}"
