Update ec2_vpc_net test for new error triggered by lack of credentials
Fix backwards compatibility

Document new return value

--- a/test/integration/targets/ec2_vpc_net/tasks/main.yml
+++ b/test/integration/targets/ec2_vpc_net/tasks/main.yml
@@ -29,7 +29,7 @@
       assert:
         that:
           - 'result is failed'
-          - 'result.msg.startswith("No handler was ready to authenticate")'
+          - '"Unable to locate credentials" in result.msg'
 
     # ============================================================
 
