--- a/test/integration/targets/azure_rm_image/tasks/main.yml
+++ b/test/integration/targets/azure_rm_image/tasks/main.yml
@@ -96,7 +96,7 @@
 - assert:
       that:
           - output.changed
-          - output.state.osDisk.blobUri == "https://{{ storage_account }}.blob.core.windows.net/testvm001/testvm001.vhd"
+          - output.id
 
 - name: Create an image from VM (idempotent)
   azure_rm_image:
@@ -107,13 +107,43 @@
   register: output
 
 - assert:
-      that: not output.changed
+      that:
+          - not output.changed
+          - output.id
+
+- name: Delete image (check mode)
+  azure_rm_image:
+      resource_group: "{{ resource_group }}"
+      name: testimage01
+      state: absent
+  register: output
+  check_mode: yes
+
+- assert:
+    that:
+      - output.changed
 
 - name: Delete image
   azure_rm_image:
       resource_group: "{{ resource_group }}"
       name: testimage01
       state: absent
+  register: output
+
+- assert:
+    that:
+      - output.changed
+
+- name: Delete image (idempotent)
+  azure_rm_image:
+      resource_group: "{{ resource_group }}"
+      name: testimage01
+      state: absent
+  register: output
+
+- assert:
+    that:
+      - not output.changed
 
 - name: Delete VM
   azure_rm_virtualmachine:
