--- a/test/integration/targets/win_disk_facts/tasks/tests.yml
+++ b/test/integration/targets/win_disk_facts/tasks/tests.yml
@@ -6,4 +6,12 @@
   assert:
     that:
     - disks_found.changed == false
-    #- not disks_found.ansible_facts.ansible_disk.total_disks_found == '0'
+    - disks_found.ansible_facts.disks[0].size is defined
+    - disks_found.ansible_facts.disks[0].number is defined
+    - disks_found.ansible_facts.disks[0].operational_status is defined
+    - disks_found.ansible_facts.disks[0].read_only is defined
+    - disks_found.ansible_facts.disks[0].clustered is defined
+    - disks_found.ansible_facts.disks[0].location is defined
+    - disks_found.ansible_facts.disks[0].guid is defined
+    - disks_found.ansible_facts.disks[0].path is defined
+    - disks_found.ansible_facts.disks[0].bootable is defined
