--- a/test/integration/targets/win_disk_facts/tasks/main.yml
+++ b/test/integration/targets/win_disk_facts/tasks/main.yml
@@ -2,8 +2,8 @@
 
 - name: Test Windows capabilities
   raw: Get-Command Get-Disk -ErrorAction SilentlyContinue; return $?
+  failed_when: no
   register: new_diskfacts
-  failed_when: new_diskfacts.rc != 0
 
 - name: Fail if Windows is not capable
   fail: msg="Cmdlet Get-Disk is not available in your Windows version"
