Changed integration test

--- a/test/integration/targets/win_disk_facts/tasks/main.yml
+++ b/test/integration/targets/win_disk_facts/tasks/main.yml
@@ -1,13 +1,22 @@
 # NOTE: The win_disk_facts module only works on Win2012R2+
 
+- name: register os version (seems integration tests don't gather this fact)
+  raw: powershell.exe "gwmi Win32_OperatingSystem | select -expand version"
+  register: os_version
+  changed_when: False
+
+- name: check if module fails gracefully when older than 2012
+  win_disk_facts:
+    name: "Gather facts"
+  when: os_version.stdout_lines[0]  is version('6.2','lt')
+  check_mode: yes
+  register: old_os_check
+  failed_when: old_os_check.msg != 'The win_disk_facts Ansible module is only available on Server 2012 (6.2) and newer'
+    
 - name: Test Windows capabilities
   raw: Get-Command Get-Disk -ErrorAction SilentlyContinue; return $?
   failed_when: no
   register: new_diskfacts
-
-- name: Fail if Windows is not capable
-  fail: msg="Cmdlet Get-Disk is not available in your Windows version"
-  when: new_diskfacts.rc != 0
 
 - name: Only run tests when Windows is capable
   when: new_diskfacts.rc == 0
