--- a/test/integration/targets/win_iis_webbinding/tasks/https-ge6.2.yml
+++ b/test/integration/targets/win_iis_webbinding/tasks/https-ge6.2.yml
@@ -48,11 +48,11 @@
 - name: CM assert changed, but not added
   assert:
     that:
-    - https_no_header | changed
+    - https_no_header is changed
     - https_no_header.operation_type == 'added'
     - https_no_header.binding_info is none
     - get_https_no_header.binding is not defined
-    - https_header | changed
+    - https_header is changed
     - https_header.operation_type == 'added'
     - https_header.binding_info is none
     - get_https_header.binding is not defined
@@ -105,7 +105,7 @@
 - name: assert changed and added
   assert:
     that:
-    - https_no_header | changed
+    - https_no_header is changed
     - https_no_header.operation_type == 'added'
     - https_no_header.binding_info is defined
     - https_no_header.binding_info.protocol == "{{ https_vars.protocol }}"
@@ -113,7 +113,7 @@
     - https_no_header.binding_info.port == {{ https_vars.port }}
     - https_no_header.binding_info.hostheader == ''
     - https_no_header.binding_info.certificateHash == "{{ thumbprint1.stdout_lines[0] }}"
-    - https_header | changed
+    - https_header is changed
     - https_header.operation_type == 'added'
     - https_header.binding_info is defined
     - https_header.binding_info.hostheader == "{{ https_header_vars.header }}"
@@ -152,8 +152,8 @@
 - name: idem assert not changed
   assert:
     that:
-    - not https_no_header | changed
-    - not https_header | changed
+    -  https_no_header is not changed
+    -  https_header is not changed
 
 #################
 ### CM Modify ###
@@ -187,7 +187,7 @@
 - name: CM assert changed but old cert
   assert:
     that:
-    - https_header | changed
+    - https_header is changed
     - https_header.operation_type == 'updated'
     - https_header.binding_info is defined
     - https_header.binding_info.ip == "{{ https_header_vars.ip }}"
@@ -233,7 +233,7 @@
 - name:  modify assert changed and new cert
   assert:
     that:
-    - https_header | changed
+    - https_header is changed
     - https_header.operation_type == 'updated'
     - https_header.binding_info is defined
     - https_header.binding_info.ip == "{{ https_header_vars.ip }}"
@@ -271,7 +271,7 @@
 - name: idem assert not changed
   assert:
     that:
-    - not https_header | changed
+    -  https_header is not changed
 
 #################
 ### CM Remove ###
@@ -320,7 +320,7 @@
 - name: cm remove assert changed, but still present
   assert:
     that:
-    - https_no_header | changed
+    - https_no_header is changed
     - https_no_header.operation_type == 'removed'
     - https_no_header.binding_info is defined
     - https_no_header.binding_info.ip == "{{ https_vars.ip }}"
@@ -331,7 +331,7 @@
     - get_https_no_header.binding.port == {{ https_vars.port }}
     - get_https_no_header.binding.protocol == "{{ https_vars.protocol }}"
     - get_https_no_header.binding.certificateHash == "{{ thumbprint1.stdout_lines[0] }}"
-    - https_header | changed
+    - https_header is changed
     - https_header.binding_info is defined
     - https_header.operation_type == 'removed'
     - https_header.binding_info.ip == "{{ https_header_vars.ip }}"
@@ -390,14 +390,14 @@
 - name: remove assert changed and gone
   assert:
     that:
-    - https_no_header | changed
+    - https_no_header is changed
     - https_no_header.binding_info is defined
     - https_no_header.operation_type == 'removed'
     - https_no_header.binding_info.ip == "{{ https_vars.ip }}"
     - https_no_header.binding_info.port == {{ https_vars.port }}
     - https_no_header.binding_info.protocol == "{{ https_vars.protocol }}"
     - get_https_no_header.binding is not defined
-    - https_header | changed
+    - https_header is changed
     - https_header.binding_info is defined
     - https_header.operation_type == 'removed'
     - https_header.binding_info.ip == "{{ https_header_vars.ip }}"
@@ -451,9 +451,9 @@
 - name: idem remove assert changed and gone
   assert:
     that:
-    - not https_no_header | changed
+    -  https_no_header is not changed
     - https_no_header.binding_info is not defined
     - get_https_no_header.binding is not defined
-    - not https_header | changed
+    -  https_header is not changed
     - https_header.binding_info is not defined
     - get_https_header.binding is not defined
