--- a/test/integration/targets/iosxr_banner/tests/netconf/basic-motd.yaml
+++ b/test/integration/targets/iosxr_banner/tests/netconf/basic-motd.yaml
@@ -29,8 +29,8 @@
 - assert:
     that:
       - "result.changed == true"
-      - "'this is my motd banner' in result.commands"
-      - "'that has a multiline' in result.commands"
+      - "'this is my motd banner' in result.xml"
+      - "'that has a multiline' in result.xml"
 
 - name: Set motd again (idempotent)
   iosxr_banner:
@@ -46,4 +46,4 @@
 - assert:
     that:
       - "result.changed == false"
-      - "result.commands | length == 0"
+      - "result.xml | length == 0"
