--- a/test/integration/targets/iosxr_banner/tests/netconf/basic-no-login.yaml
+++ b/test/integration/targets/iosxr_banner/tests/netconf/basic-no-login.yaml
@@ -28,7 +28,7 @@
 - assert:
     that:
       - "result.changed == true"
-      - "'xc:operation=\"delete\"' in result.commands"
+      - "'xc:operation=\"delete\"' in result.xml"
 
 - name: remove login (idempotent)
   iosxr_banner:
@@ -40,4 +40,4 @@
 - assert:
     that:
       - "result.changed == false"
-      - "result.commands | length == 0"
+      - "result.xml | length == 0"
