--- a/test/integration/targets/vmware_guest/tasks/create_d1_c1_f0.yml
+++ b/test/integration/targets/vmware_guest/tasks/create_d1_c1_f0.yml
@@ -51,6 +51,7 @@
         # memory_reservation: 512
         # memory_reservation_lock: False
         # nested_virt: True
+        # hotremove_cpu: True
         max_connections: 10
     disk:
         - size: 0gb
