Add connection to debug messages

--- a/test/integration/targets/iosxr_command/tests/cli/invalid.yaml
+++ b/test/integration/targets/iosxr_command/tests/cli/invalid.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/invalid.yaml"
+- debug: msg="START cli/invalid.yaml on connection={{ ansible_connection }}"
 
 - name: run invalid command
   iosxr_command:
@@ -23,4 +23,4 @@
     that:
       - "result.failed"
 
-- debug: msg="END cli/invalid.yaml"
+- debug: msg="END cli/invalid.yaml on connection={{ ansible_connection }}"
