--- a/test/integration/targets/iosxr_config/tests/cli/sublevel_strict.yaml
+++ b/test/integration/targets/iosxr_config/tests/cli/sublevel_strict.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/sublevel_strict.yaml"
+- debug: msg="START cli/sublevel_strict.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   iosxr_config:
@@ -59,4 +59,4 @@
     commands: ['no ipv4 access-list test']
     match: none
 
-- debug: msg="END cli/sublevel_strict.yaml"
+- debug: msg="END cli/sublevel_strict.yaml on connection={{ ansible_connection }}"
