--- a/test/integration/targets/iosxr_system/tests/cli/set_domain_list.yaml
+++ b/test/integration/targets/iosxr_system/tests/cli/set_domain_list.yaml
@@ -1,5 +1,5 @@
 ---
-- debug: msg="START cli/set_domain_search.yaml"
+- debug: msg="START cli/set_domain_search.yaml on connection={{ ansible_connection }}"
 
 - name: setup
   iosxr_config:
@@ -119,4 +119,4 @@
     match: none
     provider: "{{ cli }}"
 
-- debug: msg="END cli/set_domain_search.yaml"
+- debug: msg="END cli/set_domain_search.yaml on connection={{ ansible_connection }}"
